# lammps-tools-v2

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  Makefile.common  Makefile.default  Makefile.recipes  README
c_interface/: lammps_tools.h  lt_block_data.cpp  lt_block_data.h  lt_block_writers.cpp  lt_block_writers.h  lt_data_field.cpp  lt_data_field.h  lt_dump_reader.cpp  lt_dump_reader.h  lt_transformations.cpp  lt_transformations.h
cpp_lib/: Doxyfile  atom_type_info.cpp  atom_type_info.hpp  block_data.cpp  block_data.hpp  block_data_access.hpp  bond_order.cpp  bond_order.hpp  center_of_mass.cpp  center_of_mass.hpp  cluster_finder.cpp  cluster_finder.hpp  coarsening.cpp  coarsening.hpp  constants.hpp  correlation.cpp  correlation.hpp  data_field.cpp  data_field.hpp  data_reader_lammps.cpp  data_reader_lammps.hpp  density_distribution.cpp  density_distribution.hpp  domain.cpp  domain.hpp  dump_reader.cpp  dump_reader.hpp  dump_reader_hoomd_gsd.cpp  dump_reader_hoomd_gsd.hpp  dump_reader_lammps.cpp  dump_reader_lammps.hpp  dump_reader_lammps_bin.cpp  dump_reader_lammps_bin.hpp  dump_reader_lammps_gzip.cpp  dump_reader_lammps_gzip.hpp  dump_reader_lammps_plain.cpp  dump_reader_lammps_plain.hpp  dump_reader_xyz.cpp  dump_reader_xyz.hpp  enums.hpp  (+51 more)
dependencies/: README
examples/: README
examples/bond_order/: bond_order.py
examples/common_dump_files/: bondinfo.dump  single_particle.dump
examples/dump_reader/: poly.in  polymer.data  read.cpp  read.py  read_bench.py
examples/scatter/: test_scatter.py
examples/strain/: strain.cpp  strain.py
examples/transformations/: transform.py
foreign_interfaces/python3/: CMakeLists.txt  install.sh
foreign_interfaces/python3/cmake_python_interface/pybind11/: cmake_install.cmake
foreign_interfaces/python3/lammpstools/: Makefile  __init__.py  analysis.py  block_data.py  block_data_python.cpp  block_writers.py  block_writers_python.cpp  bond_order.py  bond_order_python.cpp  center_of_mass.py  center_of_mass_python.cpp  coarse.py  coarsening_python.cpp  conversions_python.cpp  convertors_python.cpp  correlate.py  correlation_python.cpp  data_field.py  data_field_python.cpp  density_distribution.py  density_distribution_python.cpp  dump_reader.py  dump_reader_python.cpp  dumpreader.py  dumpreader_python.cpp  fourier.py  fourier_python.cpp  histogram.py  histogram_python.cpp  icosahedra.py  icosahedra_python.cpp  make_vectors_opaque.hpp  neighborize.py  neighborize_python.cpp  scatter.py  scatter_python.cpp  skeletonize.py  skeletonize_python.cpp  stl_bindings.cpp  stl_bindings_python.cpp  (+7 more)
foreign_interfaces/python3/pybind11/: Makefile
internal_lib/: README
test/: Makefile  block_data.cpp  bond_order.cpp  center_of_mass.cpp  cluster_finder.cpp  data_field.cpp  domain.cpp  fourier.cpp  interface_test.cpp  lammps_data_file_test_out.data  lammps_dump_file_test_out.dump  neighborize.cpp  quaternion.cpp  rdf.cpp  readers.cpp  reconstruct_image_flags.cpp  small_hex.dump  transformations.cpp  triangle_neighs_test.data  util.cpp  writers.cpp
